RESOLVED FIXED28374
Cross-scheme requests should not be blocked by appcache rules
https://bugs.webkit.org/show_bug.cgi?id=28374
Summary Cross-scheme requests should not be blocked by appcache rules
Alexey Proskuryakov
Reported 2009-08-16 20:55:37 PDT
HTML5 spec has changed, now it says that resources with different scheme than the manifest (e.g. HTTP vs. HTTPS) should be loaded from the network normally.
Attachments
proposed fix (4.66 KB, patch)
2009-08-24 16:32 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2009-08-24 16:32:04 PDT
Created attachment 38508 [details] proposed fix
Alexey Proskuryakov
Comment 2 2009-08-24 17:09:52 PDT
Committed revision 47735.
Note You need to log in before you can comment on or make changes to this bug.