        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=28374
        Cross-scheme requests should not be blocked by appcache rules

        Test: http/tests/appcache/different-scheme.html

        * loader/appcache/ApplicationCacheHost.cpp:
        (WebCore::ApplicationCacheHost::shouldLoadResourceFromApplicationCache):
        Resources with different schemes can never be loaded from appcache.



Canonical link: https://commits.webkit.org/39313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47735 268f45cc-cd09-0410-ab3c-d52691b4dbfc